--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -4,6 +4,8 @@
 :root {
     --black: #000;
     --text-color: #333;
+    --primary: #ff0000;
+    --white: #fff;
 
     //dafault layout
     --default-layout-header-height: 60px;
