--- a/src/components/Layout/DefaultLayout/Header/Header.module.scss
+++ b/src/components/Layout/DefaultLayout/Header/Header.module.scss
@@ -2,6 +2,7 @@
     --search-boder-radius: 92px;
     --search-height: 46px;
     --search-top-spacer: 9px;
+    --search-button-width: 52px;
 
     width: 100%;
     height: var(--default-layout-header-height);
@@ -17,21 +18,29 @@
     align-items: center;
     justify-content: space-between;
 }
+.search,
+.search-result {
+    width: 361px;
+}
 
 .search {
     position: relative;
-    width: 361px;
+
     height: var(--search-height);
     background-color: rgba(22, 24, 35, 0.06);
     border-radius: var(--search-boder-radius);
+    border: 1.5px solid transparent;
     display: flex;
     padding-left: 16px;
     input {
         flex: 1;
         color: var(--black);
         font-size: 1.6rem;
-
+        caret-color: var(--primary);
         background-color: transparent;
+    }
+    input:not(:placeholder-shown) ~ .search-btn {
+        color: rgba(22, 24, 35, 0.75);
     }
     &::after {
         content: '';
@@ -39,19 +48,33 @@
         height: calc(var(--search-height) - var(--search-top-spacer) * 2);
         width: 1px;
         top: var(--search-top-spacer);
-        right: 52px;
+        right: var(--search-button-width);
         background-color: rgba(22, 24, 35, 0.12);
+    }
+
+    &:focus-within {
+        border-color: rgba(22, 24, 35, 0.2);
     }
 }
 
-.clear {
+.search-title {
+    padding: 5px 12px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
 }
 
+.clear,
 .loading {
+    position: absolute;
+    right: calc(var(--search-button-width) + 16px);
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(22, 24, 35, 0.34);
 }
 
 .search-btn {
-    width: 52px;
+    width: var(--search-button-width);
     height: 100%;
     border-top-right-radius: var(--search-boder-radius);
     border-bottom-right-radius: var(--search-boder-radius);
@@ -61,5 +84,8 @@
     &:hover {
         cursor: pointer;
         background-color: rgba(22, 24, 35, 0.03);
+    }
+    &:active {
+        background-color: rgba(22, 24, 35, 0.06);
     }
 }
